offlineimap (3.99.3) unstable; urgency=low

  * Moved password promting into imapserver.py.  Passwords are now asked
    for on-demand and typos will no longer crash the program (the user
    will be re-prompted).  Closes: #162672.

 -- John Goerzen <jgoerzen@complete.org>  Mon,  4 Nov 2002 11:16:11 -0600

offlineimap (3.99.2) unstable; urgency=low

  * Further attempts to fix imapsplit problems.
  * When an exception occurs, OfflineIMAP will attempt to print the last
    50 debug messages, whether or not debugging was enabled for this
    session.  This way, even unexpected and non-repeatable errors stand
    a chance of getting a more detailed log.
  * Handle uidvalidity file in an atomic fashion.  CLoses: #165600.
  * Supports CRAM-MD5 authentication.  Fixes [complete.org #38], and for
    Debian, Closes: #154165.
  * Noted CRAM-MD5 support in the "CONFORMING TO" section of the manual.
  * Certain servers may not always return the UID flag for new messages.
    This causes an OfflineIMAP exception, though rerunning will fix it.
    Now, OfflineIMAP will detect the condition and ignore the offending
    messages (without an exception) until the next sync.

 -- John Goerzen <jgoerzen@complete.org>  Sat, 02 Nov 2002 10:23:10 -0600

offlineimap (3.99.1) unstable; urgency=low

  * Fixed some syntax errors in imaputil.py
  * Fixed a syntax error with mbnames

 -- John Goerzen <jgoerzen@complete.org>  Wed,  9 Oct 2002 19:34:37 -0500

offlineimap (3.99.0) unstable; urgency=low

  * The next few releases are adding features and reorganizing
    code in preparation for 4.0.0.
  * imaputil.py now logs information with IMAP debugging is enabled.
  * Added folderfilter capability to mbnames recorder.  You can now omit
    specified folders from the mbnames output.
  * Added a workaround to imaputil.py to deal with a bug in imaplib.py's
    tuple when a response contains a literal in certain cases.
  * Split out the code in bin/offlineimap into offlineimap/init.py.